# PublicAPI

./: Cargo.toml  Makefile.toml  README.md  maturin.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
example/: __dunders__.md  exchange.rs  flags.rs  order_request.rs  run_algorithm.rs  run_main.rs  validation.rs
example/user/: balance.rs  mod.rs  position.rs  trade.rs
python/stock-trek/: __init__.py  __init__.pyi
python/stock_trek/: __init__.py  __init__.pyi  _stock_trek.pyi
python/stock_trek/data/: __init__.py  __init__.pyi
src/: algorithm.rs  aligned_window.rs  context.rs  data.rs  errors.rs  exchange.rs  lib.rs  main.rs  rolling_window.rs  signal.rs
src/bindings/: data.rs  mod.rs  python.rs
src/bindings/python/: mod.rs  py_algorithm.rs  py_aligned_window.rs  py_context.rs  py_event.rs  py_exchange.rs  py_rolling_window.rs  py_signal.rs  py_trading_pair.rs  python.rs
src/data/: context.rs  mod.rs  trading_pair.rs
src/data/market/: extract.rs  market.rs  market_aligned_window.rs  market_order_book.rs  market_rolling_window.rs  market_ticks.rs  raw_market_candle.rs  raw_market_dto.rs  raw_market_order_book.rs  raw_market_tick.rs
src/data/market_data/: extract.rs  market.rs  market_aligned_window.rs  market_order_book.rs  market_rolling_window.rs  market_ticks.rs  market_window.rs  mod.rs  raw_market_candle.rs  raw_market_dto.rs  raw_market_order_book.rs  raw_market_tick.rs
src/dto/: mod.rs  raw_market_candle.rs  raw_market_dto.rs  raw_market_ohlcv.rs  raw_market_order_book.rs  raw_market_quote.rs  raw_market_tick.rs
src/market_data/: extract.rs  market.rs  market_aligned_window.rs  market_order_book.rs  market_rolling_window.rs  market_ticks.rs  mod.rs
src/schema/: example-signal.json
src/schemas/: signal.json  signal.rs
src/statistics/: advanced.rs  core.rs  decompose.rs  evaluation.rs  exponential_smoothing.rs  filter.rs  filters.rs  frequency.rs  hypothesis.rs  mod.rs  moving_average.rs  moving_averages.rs  stats.rs  time_series.rs  transformation.rs  transformations.rs  wavelet.rs  wavelets.rs
src/validate/: validate.rs  validator.rs
src/validation/: mod.rs  validate.rs  validator.rs
src/verification/: file_existence_verifier.rs  mod.rs  node.rs  policy.rs  syntax_verifier.rs  verification_error.rs  verifier_map.rs  verify.rs
(+56 files in other folders)
