[package]
name = "stock-trek"
version = "0.1.6"
edition = "2021"
description = "Stock Trek time-series analysis"
authors = ["stock-trek.com <stock-trek@proton.me>"]
license = "MIT"
repository = "https://github.com/Stock-Trek/PublicAPI"
readme = "README.md"
categories = ["finance", "mathematics"]
keywords = [
  "indicators",
  "ohlcv",
  "statistics",
  "timeseries",
]

[lib]
name = "stock_trek"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.2", optional = true, features = ["extension-module", "abi3-py38"] }
rust_decimal = { version = "1.40" }

[features]
python = ["dep:pyo3"]
